src/test/compile-fail/issue-2937.rs
// error-pattern:failed to resolve imports
use x = m::f;

mod m {
}

fn main() {
}
